v1
first version of the application